--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta property="og:title" content="AI Krakow" />
+    <meta property="og:description" content="AI Krakow" />
+    <meta property="og:type" content="website" />
+
+    <title>AI Krakow</title>
   </head>
 
   <body>
